[UPDATE] notifications, config expose and group, friends
